# ants

./: Cargo.toml  README.md
data/: config.ini
src/: ant.rs  ant_hill.rs  app.rs  colony.rs  color.rs  config.rs  food.rs  main.rs  marker.rs  marker_map.rs  random.rs  tile.rs  util.rs  vector.rs  world.rs
