[package]
name = "ants"
version = "0.1.0"
authors = ["Robin Schulz <robinschulz3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "*"
glam = "*"
rand = "*"
log = "*"
pretty_env_logger = "*"
find_folder = "*"

[dependencies.sdl2]
features = ["bundled"]
version = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
